Fix overflow, card positioning.

--- a/style.css
+++ b/style.css
@@ -1,57 +1,92 @@
-body{
-    display: flex;
+*{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    width: 100vw;
-    height: 100vh;
-
-    background-color:  hsl(0, 0%, 8%);
-    padding-top: 5%;
-    place-content: center;
-
-    padding-bottom: 20px;
-    
 }
+body{
+    /* display: flex; */
+    width: 100vw;
+   height: 100vh;
+    background-color:  hsl(0, 0%, 8%);
+    justify-content: center;
+    align-items: center;
+    /* place-content: center; */
+    font-size: 14px;
+    /* padding: 2% 0%; */
+    /* overflow:hidden; */
+}
+
+.image{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+img{    border-radius: 50%;
+    width: 30%;
+    aspect-ratio: 1 ;
+    transition: all 330ms ease-in-out;
+}
+
+img:hover{
+    scale: 1.1;
+}
+
+
 
 .main_container{
     background-color: hsl(0, 0%, 12%);
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:30%;
-    padding-top: 10px;
-    
+    width: 30%;
+    padding: 10px 0;
+    height: 90%;
 }
-
-
-img{
-    border-radius: 50%;
-}
-
 .buttons_container{
-    height: 50%;
     display: flex;
     flex-direction: column;
     width: 90%;
-    margin: 20px;
-   
-
+    align-items: center;
+    overflow: hidden;
+    gap: 1rem;
+    
+  
 }
 
-button{
-    background-color: rgb(75, 74, 74);
-    border-radius: 10%;
-    padding: 10px;
+.button_link{
+    width: 100%;
+    background-color: transparent;
     
 }
+button{
+    background-color: #6c757d;
+    color: white;
+    border-radius: 5px;
+    width: 100%;
+    opacity: 10px;
+    padding: 2% 0;
+    outline: none;
+    border: none;
+    font-size: 1rem;
+    box-shadow: 0 6px 6px rgb(0, 0, 0, 0.2);
 
+}
+
+
+p,h1,h4{
+    text-align: center;
+}
 a, h1,p {
     text-decoration: none;
     color:  hsl(0, 0%, 100%);
 }
 
 button:hover{
-    background-color:  hsl(75, 94%, 57%);
+    background-color:  hsl(75, 94%, 57%) !important;
     cursor: pointer;
 }
+
+
+
+ 
